Add GroupsResponse with dates list